# minXfmr.cpp

./: .gitignore  02_DIRECTORY_STRUCTURE.md  03_CLASS_DESIGN.md  04_MEMORY_DESIGN.md  05_INFERENCE_FLOW.md  06_GGUF_FORMAT.md  07_QUANTIZATION.md  08_CPU_BACKEND.md  09_ANDROID_INTEGRATION.md  10_TEST_STRATEGY.md  11_BUILD_SYSTEM.md  12_IMPLEMENTATION_PHASES.md  13_TENSOR_SPEC.md  20_CUDA_BACKEND.md  91_DEVELOPMENT_ORDER.md  99_AI_IMPLEMENTATION_PROMPT.md  API.md  ARCHITECTURE.md  CMakeLists.txt  DESIGN_PHILOSOPHY.md  README.md  chat_err_ja_utf8.txt  chat_err_ja_utf8_afterfix.txt  chat_out_after_langfix.txt  chat_out_after_langfix2.txt  chat_out_after_langfix3.txt  chat_out_generalized.txt  chat_out_ja.txt  chat_out_ja_utf8.txt  chat_out_ja_utf8_afterfix.txt  chat_out_turnfix.txt  chat_out_turnfix2.txt  chat_out_turnfix3.txt  chat_out_turnfix4.txt  chat_out_turnfix5.txt  example_weights.txt  stdin.txt  stdout.txt
build_vs_cuda_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  minxfmr.slnx
build_vs_cuda_test/src/: minxfmr.vcxproj  minxfmr.vcxproj.filters  minxfmr_cli.vcxproj  minxfmr_cli.vcxproj.filters
include/: minxfmr.h
scripts/: find_best_transpose.ps1  find_best_transpose.py
scripts/transpose_search_logs/: summary.json
src/: CMakeLists.txt  main.cpp
src/api/: minxfmr.cpp
src/backend/: backend_runtime.cpp  backend_runtime.h
src/backend/cpu/: cpu_backend.cpp  cpu_backend.h
src/backend/cuda/: cuda_backend.cu  cuda_backend.h
src/cache/: kv_cache.cpp  kv_cache.h
src/io/: gguf_loader.cpp  gguf_loader.h
src/tensor/: tensor.cpp  tensor.h
src/tokenizer/: tokenizer.cpp  tokenizer.h
src/transformer/: attention.cpp  attention.h  feed_forward.cpp  feed_forward.h  rmsnorm.cpp  rmsnorm.h  rope.cpp  rope.h  softmax.cpp  softmax.h  transformer.cpp  transformer.h
